--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@types/node": "20.11.30",
     "@types/react": "18.2.70",
     "@types/react-dom": "18.2.22",
+    "axios": "^1.6.8",
     "cheerio": "^1.0.0-rc.12",
     "eslint": "8.57.0",
     "eslint-config-next": "14.1.4",
